fix: global overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,8 @@ body,
 :root {
   height: 100%;
   font-family: var(--font-geist-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @theme inline {
